--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,20 +1,36 @@
-{% extends 'main.html' %}
+{% extends 'main.html' %} 
 
 {% block content %}
 
-    <div>
-        <form method="POST" action="">
-            {% csrf_token %}
+{% if page == 'login' %}
 
-            <label>Username: </label>
-            <input type="text" name="username" placeholder="Enter Username" />
+<div>
+  <form method="POST" action="">
+    {% csrf_token %}
 
-            <label>Password: </label>
-            <input type="password" name="password" placeholder="Enter Password" />
+    <label>Username: </label>
+    <input type="text" name="username" placeholder="Enter Username" />
 
+    <label>Password: </label>
+    <input type="password" name="password" placeholder="Enter Password" />
 
-            <input type="submit" value="Login" />
-        </form>
-    </div>
+    <input type="submit" value="Login" />
+  </form>
+
+  <p>Don't have an account?</p>
+  <a href="{% url 'createaccount' %}">Create Account Now</a>
+</div>
+{% else %}
+<div>
+  <form method="POST" action="">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Create Account" />
+  </form>
+  <p>Already have an account?</p>
+  <a href="{% url 'login' %}">Login Now</a>
+</div>
+
+{% endif %} 
 
 {% endblock content %}
