--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -3,9 +3,9 @@
     <div class="roomListRoom__header">
       <a href="{% url 'user-profile' room.host.id %}" class="roomListRoom__author">
         <div class="avatar avatar--small">
-          <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+          <img src="{{ room.host.avatar.url}}" />
         </div>
-        <span>@{{room.host.username}}</span>
+        <span>{{room.host.name}}</span>
       </a>
       <div class="roomListRoom__actions">
         <span>{{room.created|timesince}}</span>
@@ -13,6 +13,9 @@
     </div>
     <div class="roomListRoom__content">
       <a href="{% url 'room' room.id %}">{{room.name}}</a>
+    </div>
+    <div class="roomListRoom__description">
+      <h5 href="{% url 'room' room.id %}">{{room.description}}</h5>
     </div>
     <div class="roomListRoom__meta">
       <a href="{% url 'room' room.id %}" class="roomListRoom__joined">
