--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,8 +2,8 @@
 <header class="header header--loggedIn">
   <div class="container">
     <a href="{% url 'home' %}" class="header__logo">
-      <img src="{% static 'images/logo.svg' %}" />
-      <h1>StudyBuddy</h1>
+      <img src="{% static 'images/logo.png' %}" />
+      <h1>StudyHub</h1>
     </a>
     <form class="header__search" method="GET" action="{% url 'home' %}">
       <label>
@@ -27,12 +27,12 @@
 
       {% if request.user.is_authenticated %}
       <div class="header__user">
-        <a href="{% url 'update-user' %}">
+        <a href="{% url 'user-profile' request.user.id %}">
           <div class="avatar avatar--medium active">
-            <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+            <img src="{{ request.user.avatar.url}}" />
           </div>
           <p>
-            {{request.user.username}}<span>@{{request.user.username}}</span>
+            {{request.user.name}}<span>@{{request.user.username}}</span>
           </p>
         </a>
         <button class="dropdown-button">
